cabal-version:      3.0
name:               dhall-secret
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         oyanglulu@gmail.com
author:             Jichao Ouyang
homepage:           https://github.com/jcouyang/dhall-secret
synopsis:           Encrypt Decrypt Dhall expressions
description:        A simple tool to manage secrets in Dhall configuration
category:           Data
build-type:         Simple
extra-source-files:
    README.md
    src/Type.dhall
    test/*.key
    test/*.dhall

source-repository head
    type:     git
    location: https://github.com/jcouyang/dhall-secret

library
    exposed-modules:
        Dhall.Secret
        Dhall.Secret.Age
        Dhall.Secret.Aws
        Dhall.Secret.IO
        Dhall.Secret.Type

    hs-source-dirs:     src
    other-modules:      Paths_dhall_secret
    autogen-modules:    Paths_dhall_secret
    default-language:   Haskell2010
    default-extensions:
        QuasiQuotes TemplateHaskell NamedFieldPuns OverloadedStrings

    ghc-options:        -Wall
    build-depends:
        base >=4.18.2.1 && <4.19,
        amazonka >=2.0 && <2.1,
        bytestring >=0.11.5.3 && <0.12,
        text >=2.0.2 && <2.1,
        unordered-containers >=0.2.20 && <0.3,
        cryptonite >=0.30 && <0.31,
        memory >=0.18.0 && <0.19,
        pem >=0.2.4 && <0.3,
        lens >=5.3.2 && <5.4,
        amazonka-kms >=2.0 && <2.1,
        base64-bytestring >=1.2.1.0 && <1.3,
        bech32 >=1.1.7 && <1.2,
        dhall >=1.42.1 && <1.43

executable dhall-secret
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_dhall_secret
    autogen-modules:  Paths_dhall_secret
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.18.2.1 && <4.19,
        dhall-secret,
        amazonka >=2.0 && <2.1,
        bytestring >=0.11.5.3 && <0.12,
        text >=2.0.2 && <2.1,
        unordered-containers >=0.2.20 && <0.3,
        cryptonite >=0.30 && <0.31,
        memory >=0.18.0 && <0.19,
        pem >=0.2.4 && <0.3,
        lens >=5.3.2 && <5.4,
        amazonka-kms >=2.0 && <2.1,
        base64-bytestring >=1.2.1.0 && <1.3,
        bech32 >=1.1.7 && <1.2,
        dhall >=1.42.1 && <1.43,
        optparse-applicative >=0.18.1.0 && <0.19

test-suite dhall-secret-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:
        Paths_dhall_secret
        Age
    autogen-modules:
        Paths_dhall_secret
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.18.2.1 && <4.19,
        dhall-secret,
        HUnit,
        amazonka >=2.0 && <2.1,
        bytestring >=0.11.5.3 && <0.12,
        text >=2.0.2 && <2.1,
        unordered-containers >=0.2.20 && <0.3,
        cryptonite >=0.30 && <0.31,
        memory >=0.18.0 && <0.19,
        pem >=0.2.4 && <0.3,
        lens >=5.3.2 && <5.4,
        amazonka-kms >=2.0 && <2.1,
        base64-bytestring >=1.2.1.0 && <1.3,
        bech32 >=1.1.7 && <1.2,
        dhall >=1.42.1 && <1.43
